Revert "Revert overflow hidden and position fixed from body (v1.0.2)"
This reverts commit c17816e38bc7888c286b3a9c9722bc36bc5c031c.

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body,
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 }
 
 body {
@@ -13,6 +14,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  position: fixed;
+  width: 100%;
   overscroll-behavior: none;
 }
 
